# dino_finetuning

./: .gitignore  README.md  demo.ipynb  main.py  pyproject.toml
notebooks/: eda.ipynb  notebook.ipynb  patch_level_object_detection.ipynb  semantic_segmentation.ipynb  test.ipynb  yolo_object_detection.ipynb
runs/2025-09-11/Baseline_Segmentation/dinov2/6_epochs/: events.out.tfevents.1757603711.Mac.station.8144.0  events.out.tfevents.1757603980.Mac.station.8144.11  events.out.tfevents.1757604117.Mac.station.8144.22  events.out.tfevents.1757604245.Mac.station.8144.33  events.out.tfevents.1757604378.Mac.station.8144.44  events.out.tfevents.1757604519.Mac.station.8144.55
runs/2025-09-11/Baseline_Segmentation/dinov2/6_epochs/dice_score_test/: events.out.tfevents.1757603845.Mac.station.8144.7  events.out.tfevents.1757603980.Mac.station.8144.18  events.out.tfevents.1757604117.Mac.station.8144.29  events.out.tfevents.1757604245.Mac.station.8144.40  (+2 more)
runs/2025-09-11/Baseline_Segmentation/dinov3/6_epochs/: events.out.tfevents.1757604520.Mac.station.8144.66  events.out.tfevents.1757604805.Mac.station.8144.77  events.out.tfevents.1757604968.Mac.station.8144.88  events.out.tfevents.1757605107.Mac.station.8144.99  events.out.tfevents.1757605233.Mac.station.8144.110  events.out.tfevents.1757605383.Mac.station.8144.121
src/: config.py  metrics.py  utils.py  visualizations.py
src/api/: __init__.py  app.py  client.py
src/components/: dataloaders.py  engine.py  evaluation.py  loss.py  model_builder.py
src/pipeline/: predict.py  train.py
(+114 files in other folders)
